<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color"

    android:paddingTop="10px"
    android:paddingLeft="10px"
    android:paddingBottom="10px"
    android:paddingRight="0px"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"

            android:text="@string/max_delay" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:background="@drawable/table_item">

        <TextView
            android:id="@+id/max_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"/>


        <Button
            android:layout_alignParentRight="true"
            android:layout_marginTop="15px"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:background="@drawable/update"/>
    </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/params"/>

        <TextView
            android:id="@+id/params"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"

            android:text="@string/real"/>

        <TextView
            android:id="@+id/real"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"

            android:text="@string/lattitude"/>

        <TextView
            android:id="@+id/lattitude"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"

            android:text="@string/longtitude" />

        <TextView
            android:id="@+id/longtitude"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"

            android:text="@string/neighbours" />

        <TextView
            android:id="@+id/neightbours"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"

            android:text="@string/status"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"

            android:text="@string/real"

            android:paddingTop="22px"
            android:paddingBottom="22px"
            android:paddingLeft="30px"

            android:background="@drawable/table_item"/>
    </LinearLayout>

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/photo"/>-->

</LinearLayout>